Fix buttons to not use native styling on iOS
The buttons looked very bad on iOS with native styling.

--- a/app/assets/components/button/index.css.scss
+++ b/app/assets/components/button/index.css.scss
@@ -24,6 +24,7 @@
   text-decoration: none;
   transition: width .5s ease;
   vertical-align: middle;
+  -webkit-appearance: none;
 
   > .material-icons {
     font-size: inherit;
